added collision foe vs fire

--- a/data/smb_py/assets/sprites/01.yaml
+++ b/data/smb_py/assets/sprites/01.yaml
@@ -196,6 +196,9 @@ goomba:
   boxes:
     - [-8, 0, 8, 16]
   animations:
+    idle:
+      frames:
+        - [112, 0, 16, 16, 8, 0]
     walk:
       box: 0
       frames:
