--- a/data/smb_py/rooms/world1_1.yaml
+++ b/data/smb_py/rooms/world1_1.yaml
@@ -15,10 +15,12 @@
     - factory: [bg, 92, 148, 252]
       dynamic: False
       d: [ [0,0,-5] ]
-    - factory: [spawn, {model: 'goomba', fliph: False, flipAtPlatformEnd: False, ctag: 'goomba' }]
-      d: [ [6,2,12,0]]      
+    - factory: [spawn, foe, {model: 'goomba', fliph: False, flipAtPlatformEnd: False, ctag: 'goomba' }]
+      d: [ [6,2,12,0], [71,2,11,9], [71,2,13,9], [89,2,10,0],[89,2,12,0], [96,2,20,0],[96,2,22,0], [96,2,28,0],[96,2,30,0],[96,2,34,0],[96,2,36,0] ]      
+    - factory: [spawn, koopa, {model: 'koopa', fliph: True, flipAtPlatformEnd: False, ctag: 'koopa' }]
+      d: [ [89,2,25,0]]      
     - factory: [foe, {model: 'goomba', fliph: False, flipAtPlatformEnd: False, ctag: 'goomba' }]
-      d: [ [42, 2], [50, 2], [51.5, 2]]
+      d: [ [42, 2], [50, 2], [51.5, 2], [170, 2], [171.5, 2]]
     #- factory: [koopa, {model: 'koopa', fliph: True, flipAtPlatformEnd: True, ctag: 'koopa' }]
     #  d: [ [5, 2]]
     - factory: [platform]
@@ -36,7 +38,7 @@
            [87, 9], [91, 9], [92, 9], [93, 9], [100, 5], [118, 5], [121, 9], [122, 9], [123, 9], [128, 9], [129, 5], 
            [130, 5], [131, 9], [168, 5], [169, 5], [171, 5]]
     - factory: [tilemap, pipe2]
-      d: [ [28, 2], [163, 2]]
+      d: [ [28, 2], [163, 2], [179, 2]]
     - factory: [tilemap, pipe3]
       d: [ [38, 2] ]
     - factory: [tilemap, pipe4]
