--- a/games/smb/rooms/world1_1.yaml
+++ b/games/smb/rooms/world1_1.yaml
@@ -38,6 +38,9 @@
       d: [ [20, 5], [22, 5], [24, 5], [77, 5], [79, 5], [80, 9], [81, 9], [82, 9], [83, 9], [84, 9], [85, 9], [86, 9],
            [87, 9], [91, 9], [92, 9], [93, 9], [100, 5], [118, 5], [121, 9], [122, 9], [123, 9], [128, 9], [129, 5],
            [130, 5], [131, 9], [168, 5], [169, 5], [171, 5]]
+    - factory: [mushroom_brick]
+      d: [ [21, 5], [78, 5], [109, 9]]
+
 #    - factory: [tilemap, pipe2]
 #      d: [ [28, 2], [163, 2], [179, 2]]
 #    - factory: [tilemap, pipe3]
@@ -52,8 +55,6 @@
 #      d: [[202, 2, -1]]
 #    - factory: [coinbrick]
 #      d: [[16, 5], [22, 9], [23, 5], [94, 9], [106,5], [109, 5], [112, 5], [129,9], [130,9], [170, 5]]
-#    - factory: [mushroombrick]
-#      d: [[21,5], [78, 5], [109, 9]]
 #    - factory: [collect, {'func': winSlide }]
 #      d: [[198.5,3,1,256]]
 #    - factory: [collect, {'func': gotoNext, 'info': {'world': 'world1_2', 'pos': 0} }]
