--- a/games/smb/rooms/world1_1.yaml
+++ b/games/smb/rooms/world1_1.yaml
@@ -12,17 +12,9 @@
     - pos: [164, 0]
       script: cippo
   items:
-#    - factory: [bg, 92, 148, 252]
-#      dynamic: False
-#      d: [ [0,0,-5] ]
-#    - factory: [spawn, foe, {model: 'goomba', fliph: False, flipAtPlatformEnd: False, ctag: 'goomba' }]
-#      d: [ [6,2,12,0], [71,2,11,9], [71,2,13,9], [89,2,10,0],[89,2,12,0], [96,2,20,0],[96,2,22,0], [96,2,28,0],[96,2,30,0],[96,2,34,0],[96,2,36,0] ]
-#    - factory: [spawn, koopa, {model: 'koopa', fliph: True, flipAtPlatformEnd: False, ctag: 'koopa' }]
-#      d: [ [89,2,25,0]]
-#    - factory: [foe, {model: 'goomba', fliph: False, flipAtPlatformEnd: False, ctag: 'goomba' }]
-#      d: [ [42, 2], [50, 2], [51.5, 2], [170, 2], [171.5, 2]]
-#    #- factory: [koopa, {model: 'koopa', fliph: True, flipAtPlatformEnd: True, ctag: 'koopa' }]
-#    #  d: [ [5, 2]]
+    - factory: [bg, {'color': [92, 148, 252]} ]
+      dynamic: False
+      d: [ [0, 0, -5] ]
     # left wall
     - factory: [platform]
       d: [[-1, 0, 0, 1, 16]]
@@ -40,31 +32,40 @@
            [130, 5], [131, 9], [168, 5], [169, 5], [171, 5]]
     - factory: [mushroom_brick]
       d: [ [21, 5], [78, 5], [109, 9]]
+    - factory: [coin_brick]
+      d: [ [16, 5], [22, 9], [23, 5], [94, 9], [106,5], [109, 5], [112, 5], [129,9], [130,9], [170, 5]]
+    - factory: [tile_map, {'id': pipe2}]
+      d: [ [28, 2], [163, 2], [179, 2]]
+    - factory: [tile_map, {'id': pipe3}]
+      d: [ [38, 2] ]
+    - factory: [tile_map, {'id': pipe4}]
+      d: [ [46, 2], [57, 2, 1]]
+    - factory: [warp, { 'tag': w1}]
+      d: [ [58, 6, 0, 'world1_1b', 0] ]
+    - factory: [tile_map, {'id': flagpole}]
+      d: [ [198, 3] ]
+    - factory: [tile_map, {'id': castle}]
+      d: [[202, 2, -1]]
+    - factory: [hotspot, {'func': win_slide}]
+      d: [ [198.5, 3, 0, 1,256]]
+    - factory: [hotspot, {'func': goto_stage, 'info': {'world': 'world1_2', 'pos': 0} }]
+      d: [[205, 2, 0, 2, 2]]
+    - factory: [hotspot, {'func': dead }]
+      d: [ [69, 0, 0, 32, 2 ]]
+    - factory: [tile_map, {'id': hill}]
+      d: [[0, 2, -1], [48, 2, -1], [96,2,-1], [144,2,-1], [192,2,-1]]
+    - factory: [tile_map, {'id': hillsmall}]
+      d: [[16, 2, -1],[64,2,-1]]      # - template: [sprite, flag]
+    # foes
+#    - factory: [spawn, foe, {model: 'goomba', fliph: False, flipAtPlatformEnd: False, ctag: 'goomba' }]
+#      d: [ [6,2,12,0], [71,2,11,9], [71,2,13,9], [89,2,10,0],[89,2,12,0], [96,2,20,0],[96,2,22,0], [96,2,28,0],[96,2,30,0],[96,2,34,0],[96,2,36,0] ]
+#    - factory: [spawn, koopa, {model: 'koopa', fliph: True, flipAtPlatformEnd: False, ctag: 'koopa' }]
+#      d: [ [89,2,25,0]]
+#    - factory: [foe, {model: 'goomba', fliph: False, flipAtPlatformEnd: False, ctag: 'goomba' }]
+#      d: [ [42, 2], [50, 2], [51.5, 2], [170, 2], [171.5, 2]]
+#    #- factory: [koopa, {model: 'koopa', fliph: True, flipAtPlatformEnd: True, ctag: 'koopa' }]
+#    #  d: [ [5, 2]]
 
-#    - factory: [tilemap, pipe2]
-#      d: [ [28, 2], [163, 2], [179, 2]]
-#    - factory: [tilemap, pipe3]
-#      d: [ [38, 2] ]
-#    - factory: [tilemap, pipe4]
-#      d: [ [46, 2], [57, 2, 1]]
-#    - factory: [warp, { tag: w1 }]
-#      d: [[58,6,'world1_1b',0]]
-#    - factory: [tilemap, flagpole]
-#      d: [ [198, 3] ]
-#    - factory: [tilemap, castle]
-#      d: [[202, 2, -1]]
-#    - factory: [coinbrick]
-#      d: [[16, 5], [22, 9], [23, 5], [94, 9], [106,5], [109, 5], [112, 5], [129,9], [130,9], [170, 5]]
-#    - factory: [collect, {'func': winSlide }]
-#      d: [[198.5,3,1,256]]
-#    - factory: [collect, {'func': gotoNext, 'info': {'world': 'world1_2', 'pos': 0} }]
-#      d: [[205,2,2,2]]
-#    - factory: [collect, {'func': dead' }]
-#      d: [[69,0,32,2]]
-#    - factory: [tilemap, hill]
-#      d: [[0, 2, -1], [48, 2, -1], [96,2,-1], [144,2,-1], [192,2,-1]]
-#    - factory: [tilemap, hillsmall]
-#      d: [[16, 2, -1],[64,2,-1]]      # - template: [sprite, flag]
     # - factory: [img, 'gfx/waterfll.png']
     #   d: [[2,0,1,3,2]]
     # - factory: [sprite, foam]
