--- a/src/monkey/CMakeLists.txt
+++ b/src/monkey/CMakeLists.txt
@@ -14,11 +14,12 @@ add_library(monkey SHARED ${MONKEY_INCLUDE} ${MONKEY_SOURCE})
 
 #message(${LUA_INCLUDE_DIR})
 
-include_directories(${INCLUDE_DIR} ${PYBIND_INCLUDE_DIR} ${Python_INCLUDE_DIRS} ${FREETYPE_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${LUA_INCLUDE_DIR})
+include_directories(${INCLUDE_DIR} ${PYBIND_INCLUDE_DIR} ${Python_INCLUDE_DIRS} ${FREETYPE_INCLUDE_DIRS}
+		${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${YAML_INCLUDE_DIRS})
 
 target_link_libraries(monkey
     ${OPENGL_LIBRARIES} ${Python_LIBRARIES} glfw
-    GLEW::GLEW ${FREETYPE_LIBRARIES} ${LUA_LIBRARIES}
+    GLEW::GLEW ${FREETYPE_LIBRARIES} ${YAML_CPP_LIBRARIES}
     ${PNG_LIBRARY} ${JPEG_LIBRARIES} ${CMAKE_DL_LIBS}
     ${Boost_SYSTEM_LIBRARY} alglib)
 
