--- a/games/monkey/assets/01.yaml
+++ b/games/monkey/assets/01.yaml
@@ -25,74 +25,74 @@ guybrush:
   type: 'asset.sprite'
   animations:
     idle_e:
-      frames:
-        - [2, 51, 19, 47, 10, 0]
+      elements:
+        - quads: [[2, 51, 19, 47, 10, 0]]
     idle_n:
-      frames:
-        - [49, 51, 20, 47, 12, 0]
+      elements:
+        - quads: [[49, 51, 20, 47, 12, 0]]
     idle_s:
-      frames:
-        - [24, 51, 22, 47, 12, 0]
+      elements:
+        - quads: [[24, 51, 22, 47, 12, 0]]
     walk_e:
-      frames:
-        - [4,1,32,47,17,0]
-        - [39,1,17,47,13,0]
-        - [60,1,19,47,12,0]
-        - [83,1,31,47,16,0]
-        - [117,1,18,47,13,0]
-        - [141,1,19,47,12,0]
+      elements:
+        - quads: [[4,1,32,47,17,0]]
+        - quads: [[39,1,17,47,13,0]]
+        - quads: [[60,1,19,47,12,0]]
+        - quads: [[83,1,31,47,16,0]]
+        - quads: [[117,1,18,47,13,0]]
+        - quads: [[141,1,19,47,12,0]]
     walk_s:
-      frames:
-        - [207,51,22,47,11,0]
-        - [231,51,21,47,11,0]
-        - [3,101,20,47,10,0]
-        - [25,101,22,47,12,0]
-        - [49,101,21,47,11,0]
-        - [72,101,20,47,11,0]
+      elements:
+        - quads: [[207,51,22,47,11,0]]
+        - quads: [[231,51,21,47,11,0]]
+        - quads: [[3,101,20,47,10,0]]
+        - quads: [[25,101,22,47,12,0]]
+        - quads: [[49,101,21,47,11,0]]
+        - quads: [[72,101,20,47,11,0]]
     walk_n:
-      frames:
-        - [72,51,21,47,10,0]
-        - [95,51,21,47,10,0]
-        - [118,51,21,47,10,0]
-        - [139,51,21,47,10,0]
-        - [163,51,21,47,10,0]
-        - [186,51,19,47,8,0]
-    talk_e:
-      frames:
-        - [[157,112,19,36,10,0], [179,101,11,12,7,-35]]
-        - [[157,112,19,36,10,0], [192,101,11,12,7,-35]]
-        - [[157,112,19,36,10,0], [205,101,11,12,7,-35]]
-        - [[157,112,19,36,10,0], [179,115,11,12,7,-35]]
-        - [[157,112,19,36,10,0], [192,101,11,12,7,-35]]
-        - [[157,112,19,36,10,0], [179,101,11,12,7,-35]]
-        - [[157,112,19,36,10,0], [192,115,11,12,7,-35]]
-        - [[157,112,19,36,10,0], [205,115,11,12,7,-35]]
-        - [[157,112,19,36,10,0], [179,101,11,12,7,-35]]
-        - [[157,112,19,36,10,0], [192,115,11,12,7,-35]]
-        - [[157,112,19,36,10,0], [179,101,11,12,7,-35]]
-        - [[157,112,19,36,10,0], [205,101,11,12,7,-35]]
-    talk_s:
-      frames:
-        - [[164,12,22,36,12,0], [179,129,11,13,6,-34]]
-        - [[164,12,22,36,12,0], [192,129,11,13,6,-34]]
-        - [[164,12,22,36,12,0], [179,129,11,13,6,-34]]
-        - [[164,12,22,36,12,0], [192,129,11,13,6,-34]]
-        - [[164,12,22,36,12,0], [205,129,11,13,6,-34]]
-        - [[164,12,22,36,12,0], [179,143,11,13,6,-34]]
-        - [[164,12,22,36,12,0], [192,129,11,13,6,-34]]
-        - [[164,12,22,36,12,0], [192,143,11,13,6,-34]]
-        - [[164,12,22,36,12,0], [205,143,11,13,6,-34]]
-        - [[164,12,22,36,12,0], [192,143,11,13,6,-34]]
-        - [[164,12,22,36,12,0], [179,129,11,13,6,-34]]
-        - [[164,12,22,36,12,0], [192,129,11,13,6,-34]]
-        - [[164,12,22,36,12,0], [205,143,11,13,6,-34]]
-    talk_n:
-      frames:
-        - [[189,12,20,36,12,0], [220,101,11,12,7,-35]]
-        - [[189,12,20,36,12,0], [233,101,11,12,7,-35]]
-        - [[189,12,20,36,12,0], [220,101,11,12,7,-35]]
-        - [[189,12,20,36,12,0], [233,101,11,12,7,-35]]
-        - [[189,12,20,36,12,0], [220,115,11,12,7,-35]]
+      elements:
+        - quads: [[72,51,21,47,10,0]]
+        - quads: [[95,51,21,47,10,0]]
+        - quads: [[118,51,21,47,10,0]]
+        - quads: [[139,51,21,47,10,0]]
+        - quads: [[163,51,21,47,10,0]]
+        - quads: [[186,51,19,47,8,0]]
+#    talk_e:
+#      elements:
+#        - [[157,112,19,36,10,0], [179,101,11,12,7,-35]]
+#        - [[157,112,19,36,10,0], [192,101,11,12,7,-35]]
+#        - [[157,112,19,36,10,0], [205,101,11,12,7,-35]]
+#        - [[157,112,19,36,10,0], [179,115,11,12,7,-35]]
+#        - [[157,112,19,36,10,0], [192,101,11,12,7,-35]]
+#        - [[157,112,19,36,10,0], [179,101,11,12,7,-35]]
+#        - [[157,112,19,36,10,0], [192,115,11,12,7,-35]]
+#        - [[157,112,19,36,10,0], [205,115,11,12,7,-35]]
+#        - [[157,112,19,36,10,0], [179,101,11,12,7,-35]]
+#        - [[157,112,19,36,10,0], [192,115,11,12,7,-35]]
+#        - [[157,112,19,36,10,0], [179,101,11,12,7,-35]]
+#        - [[157,112,19,36,10,0], [205,101,11,12,7,-35]]
+#    talk_s:
+#      elements:
+#        - [[164,12,22,36,12,0], [179,129,11,13,6,-34]]
+#        - [[164,12,22,36,12,0], [192,129,11,13,6,-34]]
+#        - [[164,12,22,36,12,0], [179,129,11,13,6,-34]]
+#        - [[164,12,22,36,12,0], [192,129,11,13,6,-34]]
+#        - [[164,12,22,36,12,0], [205,129,11,13,6,-34]]
+#        - [[164,12,22,36,12,0], [179,143,11,13,6,-34]]
+#        - [[164,12,22,36,12,0], [192,129,11,13,6,-34]]
+#        - [[164,12,22,36,12,0], [192,143,11,13,6,-34]]
+#        - [[164,12,22,36,12,0], [205,143,11,13,6,-34]]
+#        - [[164,12,22,36,12,0], [192,143,11,13,6,-34]]
+#        - [[164,12,22,36,12,0], [179,129,11,13,6,-34]]
+#        - [[164,12,22,36,12,0], [192,129,11,13,6,-34]]
+#        - [[164,12,22,36,12,0], [205,143,11,13,6,-34]]
+#    talk_n:
+#      elements:
+#        - [[189,12,20,36,12,0], [220,101,11,12,7,-35]]
+#        - [[189,12,20,36,12,0], [233,101,11,12,7,-35]]
+#        - [[189,12,20,36,12,0], [220,101,11,12,7,-35]]
+#        - [[189,12,20,36,12,0], [233,101,11,12,7,-35]]
+#        - [[189,12,20,36,12,0], [220,115,11,12,7,-35]]
 lookout:
   sheet: 'gfx/sprites/sprites1.png'
   type: 'asset.sprite'
@@ -633,8 +633,8 @@ meat:
   type: 'asset.sprite'
   animations:
     default:
-      frames:
-        - [24,213,24,6]
+      elements:
+        - quads: [[24,213,24,6]]
 pot:
   sheet: 'gfx/sprites/sprites1.png'
   type: 'asset.sprite'
