--- a/games/monkey/rooms/kitchen.yaml
+++ b/games/monkey/rooms/kitchen.yaml
@@ -11,7 +11,7 @@
       d: [ [204, 0, 1] ]
     - factory: [bg, {'image': gfx/kitchen3.png}]
       d: [ [115, 0, 1] ]
-    - factory: [walkarea, {'id': walkarea_0, 'outline': [40, 16, 59, 21, 155, 21, 180, 18, 192,18,294,18,307,12,199,9,207,0,160,0,149,11,112,11,100,0,40,0]}]
+    - factory: [walkarea, {'id': walkarea_0, 'outline': [40,0,100,0,112,11,149,11,160,0,207,0,199,9,307,12,294,18,192,18,180,18,155,21,59,21,40,16] }]
       d: [[0,0,0]]
 ##  bg:
 #    - image: gfx/kitchen.png
